[package]
name = "brrrlang"
version = "0.1.0"
authors = ["Osama Bin Laden <help@alquida.terrorism.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
ansi_term = "0.12.1"
dyn-clone = "1.0.1"
num_cpus = "1.0"
toml = "0.5.6"