[package]
name = "brrrlang"
version = "0.1.0"
authors = ["Osama Bin Laden <help@alquida.terrorism.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
toml = "0.5.6"
regex = "1.4.2"
clap = "2.33.3"